# sensors-to-mqtt

./: Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  config.toml  config.yaml  docker-compose.yml  example.settings.toml  sensors-to-mqtt.service
scripts/: build_packages.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  mqtt_handler.rs  publisher.rs  service.rs
src/filters/: kalman_1d.rs  mod.rs
src/sensors/: mod.rs  registry.rs  synthetic.rs
src/sensors/gpio/: button.rs  mod.rs
src/sensors/i2c/: ads1115.rs  bh1750.rs  bme280.rs  bmp280.rs  ina219.rs  mod.rs  mpu6500.rs  sht31.rs
src/sensors/serial/: mod.rs  sds011.rs
src/transport/: framing.rs  i2c_bus.rs  mod.rs
src/tui/: mod.rs
src/tui/tabs/: mod.rs
src/tui/widgets/: mod.rs
src/ui/: app.rs  input.rs  mod.rs
src/ui/widgets/: chart.rs  g_meter.rs  help.rs  mod.rs  sensor_list.rs  status_bar.rs
tests/: integration_tests.rs
