[package]
name = "sensors-to-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
i2cdev = "0.6.1"
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
anyhow = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml_ng = "0.10.0"
serde_json = "1.0.138"
chrono = "0.4.39"
paho-mqtt = "0.12.5"
crossterm = "0.28.1"